# bookmarks_service

./: .env.example  .flake8  .gitignore  Dockerfile  LICENSE  README.md  entrypoint_server.sh  entrypoint_worker.sh  pyproject.toml  requirements.txt
infra/: docker-compose.yml  nginx.conf
src/backend/api/: open_api.py  serializers.py  tasks.py  urls.py  utils.py  views.py
src/backend/backend/: celery.py  settings.py  urls.py
src/backend/bookmarks/: admin.py  models.py
src/backend/bookmarks/migrations/: 0001_initial.py  0002_initial.py  0003_alter_bookmark_description_alter_bookmark_image_and_more.py  0004_alter_bookmark_link_type.py  0005_alter_bookmark_link_type.py  0006_alter_bookmark_link_type.py  0007_alter_bookmark_options_alter_collection_options_and_more.py
src/backend/core/: models.py
src/backend/users/: models.py
src/backend/users/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_remove_user_username.py
